# FastestBloomFilter

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
.cache/clangd/index/: base.h.9AAD9077A4E8357B.idx  cache_sectorized_bloomfilter.cpp.D73792406DF29133.idx  cache_sectorized_bloomfilter.h.0BDA4B1B582DA73F.idx  main_benchmark.cpp.A759F303E80462C5.idx  register_blocked_bloomfilter.cpp.EFFC033A11B50B9A.idx  register_blocked_bloomfilter.h.F80A81E669B65904.idx  register_blocked_bloomfilter_32.h.B6A6EF9D3E257C19.idx
include/: base.h  cache_sectorized_BF.h  cache_sectorized_BF_32bit.h  cache_sectorized_BF_64bit.h  cache_sectorized_bloomfilter.h  impala_blocked_BF_64bit.h  impala_blocked_BF_64bit_avx512.h  new_cache_sectorized_BF_32bit.h  register_blocked_BF_2x32bit.h  register_blocked_BF_32bit.h  register_blocked_BF_32bit_Masks.h  register_blocked_BF_64bit.h  register_blocked_BF_64bit_Masks.h
scripts/: run_benchmarks.py  run_benchmarks.sh
src/: main_benchmark.cpp
tests/: test_bloom_filters.cpp
